--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.erpyjune</groupId>
   <artifactId>utils</artifactId>
-  <version>0.2.9</version>
+  <version>0.2.18</version>
   <packaging>jar</packaging>
 
   <name>utils</name>
@@ -33,6 +33,20 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.1</version>
+    </dependency>
+
+    <!-- thumbnail -->
+    <dependency>
+      <groupId>net.coobird</groupId>
+      <artifactId>thumbnailator</artifactId>
+      <version>0.4.8</version>
+    </dependency>
+
+    <!-- common io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
     </dependency>
 
   </dependencies>
